package com.example.lbycpeifinalproject.misc;

public interface CartInterface {
    void setId(int id);
    int getId();

    void setQuantity(int num);
    int getQuantity();
}
