@startuml

title __MISC's Class Diagram__\n

    namespace com.example.lbycpeifinalproject {
      namespace misc {
        class com.example.lbycpeifinalproject.misc.CartController {
            + MAX_NUM : int
            + cart : CartObject[]
            + numberCartItems : int
            + loadCart()
            + updateCart()
            - readAll()
        }
      }
    }
  

    namespace com.example.lbycpeifinalproject {
      namespace misc {
        interface com.example.lbycpeifinalproject.misc.CartInterface {
            {abstract} + getId()
            {abstract} + getQuantity()
            {abstract} + setId()
            {abstract} + setQuantity()
        }
      }
    }
  

    namespace com.example.lbycpeifinalproject {
      namespace misc {
        class com.example.lbycpeifinalproject.misc.CartObject {
            - id : int
            - quantity : int
            + getId()
            + getQuantity()
            + setId()
            + setQuantity()
        }
      }
    }
  

    namespace com.example.lbycpeifinalproject {
      namespace misc {
        class com.example.lbycpeifinalproject.misc.DatabaseController {
            + MAX_NUM : int
            + numberProducts : int
            + products : ProductObject[]
            + loadDatabase()
            + updateDatabase()
            - readAll()
        }
      }
    }
  

    namespace com.example.lbycpeifinalproject {
      namespace misc {
        interface com.example.lbycpeifinalproject.misc.ProductInterface {
            {abstract} + getCategory()
            {abstract} + getDescription()
            {abstract} + getId()
            {abstract} + getImageFileName()
            {abstract} + getName()
            {abstract} + getPrice()
            {abstract} + getQuantityInStock()
            {abstract} + getRating()
            {abstract} + setCategory()
            {abstract} + setDescription()
            {abstract} + setId()
            {abstract} + setImageFileName()
            {abstract} + setName()
            {abstract} + setPrice()
            {abstract} + setQuantityInStock()
            {abstract} + setRating()
        }
      }
    }
  

    namespace com.example.lbycpeifinalproject {
      namespace misc {
        class com.example.lbycpeifinalproject.misc.ProductObject {
            + category : String[]
            + imageFileName : String[]
            - description : String
            - id : int
            - name : String
            - price : double
            - quantityInStock : int
            - rating : double
            + getCategory()
            + getDescription()
            + getId()
            + getImageFileName()
            + getName()
            + getPrice()
            + getQuantityInStock()
            + getRating()
            + setCategory()
            + setDescription()
            + setId()
            + setImageFileName()
            + setName()
            + setPrice()
            + setQuantityInStock()
            + setRating()
        }
      }
    }
  

  com.example.lbycpeifinalproject.misc.CartObject .up.|> com.example.lbycpeifinalproject.misc.CartInterface
  com.example.lbycpeifinalproject.misc.ProductObject .up.|> com.example.lbycpeifinalproject.misc.ProductInterface
  com.example.lbycpeifinalproject.misc.CartObject -up-|> com.example.lbycpeifinalproject.misc.CartController
  com.example.lbycpeifinalproject.misc.ProductObject -up-|> com.example.lbycpeifinalproject.misc.DatabaseController


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
